5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3999/executions/1712_2498.log
== TEST (2019-05-13 13:16:01) 
-- CODE:
Na=int(input("numero de hab A: "))
Nb=int(input("numero de hab B: "))
pA=(float(input("percentual A: ")))/100
pB=(float(input("percentual B: ")))/100
ano=0
while(a<b):
	Na=Na+(Na*pA)
	Nb=Nb+(Nb*pB)
	ano=ano+1
print(ano)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(a<b):
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:16:28) 
-- CODE:
Na=int(input("numero de hab A: "))
Nb=int(input("numero de hab B: "))
pA=(float(input("percentual A: ")))/100
pB=(float(input("percentual B: ")))/100
ano=0
while(Na<Nb):
	Na=Na+(Na*pA)
	Nb=Nb+(Nb*pB)
	ano=ano+1
print(ano)	
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:16:45) 
-- CODE:
Na=int(input("numero de hab A: "))
Nb=int(input("numero de hab B: "))
pA=(float(input("percentual A: ")))/100
pB=(float(input("percentual B: ")))/100
ano=0
while(Na<Nb):
	Na=Na+(Na*pA)
	Nb=Nb+(Nb*pB)
	ano=ano+1
print(ano)	
-- EXECUTION TIME:
0.140874
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
